structure, install express,mongo

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/shabanzadeh/Vacation_planner/issues"
   },
-  "homepage": "https://github.com/shabanzadeh/Vacation_planner#readme"
+  "homepage": "https://github.com/shabanzadeh/Vacation_planner#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
